<resources>
    <string name="app_name">WeChat</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>

    <!--登录、注册页-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="equipment_number">设备号</string>
    <string name="email">邮箱</string>
    <string name="mobile">手机号</string>
    <string name="quit">退出</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="hint_old_password">请输入原密码</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="hint_email">请输入邮箱</string>
</resources>
