<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.lehand.wechat.ui.RegisterActivity">

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <com.lehand.tools.widget.DrawableTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#999999"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableHeight="40dp"
        app:drawableWidth="40dp"
        app:leftDrawable="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical|right"
                android:text="@string/username"
                android:textColor="#999999"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.lehand.tools.widget.PowerfulEditText
                android:id="@+id/et_username"
                style="@style/EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/hint_username"
                android:maxLength="15"
                app:borderStyle="animator"
                app:clearDrawable="@drawable/icon_clean"
                app:styleColor="@color/white" />
        </LinearLayout>


        <View
            style="@style/LineTheme"
            android:layout_marginLeft="95dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical|right"
                android:text="@string/password"
                android:textColor="#999999"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.lehand.tools.widget.PowerfulEditText
                android:id="@+id/et_pwd"
                style="@style/EditTextTheme"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="11"
                app:borderStyle="animator"
                app:clearDrawable="@drawable/icon_clean"
                app:styleColor="@color/white" />
        </LinearLayout>

        <View
            style="@style/LineTheme"
            android:layout_marginLeft="95dp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6" />
</LinearLayout>
